@@ -33,8 +33,6 @@ if (file_exists(__DIR__.'/../public/lang/custom.php')) {
     require_once(__DIR__.'/../public/lang/custom.php');
 }
 
-date_default_timezone_set("Europe/Paris");
-
 require_once(__DIR__.'/init_entitymanager.php');
 require_once(__DIR__.'/init_plugins.php');
 
